--- a/app/globals.css
+++ b/app/globals.css
@@ -215,14 +215,14 @@ body {
 
 @keyframes fall {
   0% {
-    top: -10%;
+    transform: translateY(0);
     opacity: 1;
   }
   70% {
     opacity: 0.7;
   }
   100% {
-    top: 80%;
+    transform: translateY(calc(100vh + 20%));
     opacity: 0;
   }
 }
@@ -232,11 +232,21 @@ body {
   animation: fall linear infinite;
   animation-duration: var(--animation-duration);
   animation-delay: var(--animation-delay);
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  top: -10%;
 }
 
 .falling-square {
   background: #ffffff0f;
-  @apply rounded;
+  border-radius: 0.25rem 
 }
 
-
+.no-select {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
